app/[locale]/globals.css
@import "tailwindcss";

:root {
  --background: #f7f7f7;
  --primary-color: #3ea796;
  --nav-bar: #f7f3ed;
  --heading: #333333;
  --light-silver: #68727c;
}

@theme {
  --color-primary: var(--primary-color);
  --color-navbar: var(--nav-bar);
  --color-heading: var(--heading);
  --color-paragraph: var(--light-silver);
  --color-main-bg: var(--background);
  --breakpoint-*: initial;

  --breakpoint-sm: 640px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 1024px;
  --breakpoint-xl: 1280px;
  --breakpoint-2xl: 1440px;
  --breakpoint-desktop: 90rem;
  --font-jetbrains: var(--font-jetbrains);
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */

@layer utilities {
  .bg-gold-cream {
    background: linear-gradient(
      to bottom,
      oklch(92.095% 0.06049 79.093),
      oklch(97.614% 0.00011 271.152)
    );
  }

  .card {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
    border-radius: 1rem;
  }

  @media (min-width: 768px) {
    .card {
      padding-left: 2.5rem;
      padding-right: 2.5rem;
      padding-top: 2rem;
      padding-bottom: 2rem;
    }
  }

  @media (min-width: 1024px) {
    .card {
      padding-left: 3.5rem;
      padding-right: 3.5rem;
    }
  }

  .h3-card-Heading {
    font-size: 20px;
    font-weight: 600;
    margin: 0 0 4px 0;
  }
}

body {
  background: var(--background);
}

html {
  scroll-behavior: smooth;
}

#links-container > li > a {
  position: relative;
  padding-bottom: 2px;
  transition: color 100ms;
}

#links-container > li > a::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 0;
  height: 2px;
  background: var(--primary-color);
  transition: width 150ms;
}

#links-container > li > a:hover::after {
  width: 100%;
}

#links-container > li > a:hover {
  color: var(--primary-color);
}

/* active state */
.active > li > a::after {
  width: 100%;
}

.active > li > a {
  color: var(--primary-color);
}

